--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
     </div>
   </template>
 <script src="js/main.js"></script>
+<script src="js/map.js"></script>
+<script src="js/pin.js"></script>
 <script src="js/form.js"></script>
 </body>
 </html>
