--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
-<script src="js/data.js"></script>
+<script src="js/load.js"></script>
 <script src="js/main.js"></script>
 <script src="js/map.js"></script>
 <script src="js/pin.js"></script>
