--- a/index.html
+++ b/index.html
@@ -251,5 +251,6 @@
 <script src="js/map.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/form.js"></script>
+<script src="js/pinmove.js"></script>
 </body>
 </html>
