--- a/index.html
+++ b/index.html
@@ -80,11 +80,10 @@
         </form>
       </div>
     </section>
-
     <!-- Форма объявления -->
     <section class="notice">
       <h2 class="notice__title">Ваше объявление</h2>
-      <form class="ad-form ad-form--disabled" method="post" enctype="multipart/form-data" autocomplete="off">
+      <form class="ad-form ad-form--disabled" method="post"  enctype="multipart/form-data" autocomplete="off" name="ad-form">
         <fieldset class="ad-form-header">
           <legend class="ad-form-header__title">Ваша фотография (для карты)</legend>
           <div class="ad-form-header__upload">
