--- a/index.html
+++ b/index.html
@@ -250,5 +250,6 @@
 <script src="js/map.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/form.js"></script>
+<script src="js/card.js"></script>
 </body>
 </html>
