--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
       <button class="error__button" href="#">Попробовать снова</button>
     </div>
   </template>
+<script src="js/dom.js"></script>
 <script src="js/load.js"></script>
 <script src="js/map.js"></script>
 <script src="js/pin.js"></script>
