--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
   </template>
 <script src="js/dom.js"></script>
 <script src="js/load.js"></script>
+<script src="js/main.js"></script>
 <script src="js/map.js"></script>
 <script src="js/pin.js"></script>
 <script src="js/form.js"></script>
